# FEITIR

./: .gitignore  .travis.yml  CMakeLists.txt  benchmarkScenario.json  benchmarkScenario.json.in  readme.md
src/: CMakeLists.txt
src/main/: CMakeLists.txt  main.cpp
src/main/algorithm/: BagOfWords.cpp  BagOfWords.h  CMakeLists.txt
src/main/algorithm/BSIFT/: BSIFTDatabaseExtractor.h  BSIFTDatabaseTranslator.h  BSIFTExtractor.cpp  BSIFTExtractor.h  CMakeLists.txt  DescriptorMedianBSIFTExtractor.cpp  DescriptorMedianBSIFTExtractor.h  ImageBSIFT.cpp  ImageBSIFT.h
src/main/algorithm/BSIFT/comparasion_array/: ComparasionArrayBSIFTExtractor.h
src/main/algorithm/BSIFT/comparison_array/: ComparisonArrayBSIFTExtractor.h
src/main/algorithm/BSIFT/descriptor_median/: DescriptorMedianBSIFTExtractor.cpp  DescriptorMedianBSIFTExtractor.h
src/main/algorithm/BSIFT/descriptor_position_median/: DescriptorPositionMedianBSIFTExtractor.cpp  DescriptorPositionMedianBSIFTExtractor.h
src/main/algorithm/BSIFT/descriptor_voronoi_position/: DescriptorVoronoiPositionBSIFTExtractor.cpp  DescriptorVoronoiPositionBSIFTExtractor.h
src/main/algorithm/BSIFT/locality_sensitive_hashing/: LocalitySensitiveHashingBSIFTExtractor.cpp  LocalitySensitiveHashingBSIFTExtractor.h
src/main/algorithm/BSIFT/vectors_compare/: VectorsCompareBSIFTExtractor.cpp  VectorsCompareBSIFTExtractor.h
src/main/algorithm/dictionary/: CMakeLists.txt  KMeansDictionary.cpp  KMeansDictionary.h
src/main/algorithm/indexer/: CMakeLists.txt  Indexer.h  IndexerConfig.h  Parameters.cpp  Parameters.h  Query.cpp  Query.h  Result.cpp  Result.h
src/main/algorithm/indexer/binary_inverted_file/: BIFConfig.cpp  BIFConfig.h  BinaryInvertedFileIndexer.h
src/main/algorithm/indexer/cross_indexer/: CrossConfig.cpp  CrossConfig.h  CrossIndexer.cpp  CrossIndexer.h
src/main/algorithm/indexer/inverted_file/: IFConfig.cpp  IFConfig.h  InvertedFileIndexer.cpp  InvertedFileIndexer.h
src/main/algorithm/indexer/inverted_file_sift/: IFSConfig.cpp  IFSConfig.h  InvertedFileSIFTIndexer.cpp  InvertedFileSIFTIndexer.h
src/main/algorithm/indexer/supporting_words_inverted_file/: SWIFConfig.cpp  SWIFConfig.h  SupportingWordsInvertedFileIndexer.h
src/main/algorithm/vocabulary/: CMakeLists.txt  DatabaseTranslator.cpp  DatabaseTranslator.h  DatabaseTranslatorPreserveOriginal.cpp  DatabaseTranslatorPreserveOriginal.h  KMeansVocabulary.cpp  KMeansVocabulary.h  VocabularyBuilder.h  VocabularyConfig.cpp  VocabularyConfig.h
src/main/algorithm/vocabulary/hierarchical_kmeans/: HKMeansConfig.cpp  HKMeansConfig.h  HKMeansVocabularyBuilder.cpp  HKMeansVocabularyBuilder.h
src/main/algorithm/vocabulary/kmeans/: KMeansConfig.cpp  KMeansConfig.h  KMeansVocabularyBuilder.cpp  KMeansVocabularyBuilder.h
src/main/benchmark/: BenchmarkDescription.cpp  BenchmarkDescription.h  BenchmarkScenario.cpp  BenchmarkScenario.h  BenchmarkScenarioFactory.cpp  BenchmarkScenarioFactory.h  BenchmarkScenarioRunner.cpp  BenchmarkScenarioRunner.h  CMakeLists.txt  benchmark_config.h.in
src/main/benchmark/benchmark_description/: BSIFTBenchmarkDescription.cpp  BSIFTBenchmarkDescription.h  BSIFTMethodDescription.cpp  BSIFTMethodDescription.h  BenchmarkDescriptionFactory.cpp  BenchmarkDescriptionFactory.h  BenchmarkScenario.cpp  BenchmarkScenario.h  CMakeLists.txt  IndexerBenchmarkDescription.cpp  IndexerBenchmarkDescription.h
src/main/benchmark/benchmark_description/bsift/: BSIFTAlgorithm.cpp  BSIFTAlgorithm.h  BSIFTBenchmark.cpp  BSIFTBenchmark.h  BSIFTBenchmarkDescription.cpp  BSIFTBenchmarkDescription.h  BSIFTMethod.cpp  BSIFTMethod.h  BSIFTMethodDescription.cpp  BSIFTMethodDescription.h
src/main/benchmark/benchmark_description/indexer/: BSIFTAlgorithm.cpp  BSIFTAlgorithm.h  IndexerBenchmark.cpp  IndexerBenchmark.h  IndexerMethod.cpp  IndexerMethod.h
src/main/benchmark/benchmark_description/retrieval/: RetrievalBenchmark.cpp  RetrievalBenchmark.h
src/main/database/: CMakeLists.txt  Database.cpp  Database.h  DatabaseFactory.cpp  DatabaseFactory.h
src/main/database/category/: CMakeLists.txt  Category.cpp  Category.h  CategoryFactory.cpp  CategoryFactory.h
src/main/database/image/: CMakeLists.txt  (+4 more)
src/main/image/: Image.cpp  Image.h  ImageFactory.cpp  ImageFactory.h
src/main/retrieval/: BagOfWords.cpp  BagOfWords.h  CMakeLists.txt
src/main/util/: CMakeLists.txt  Util.cpp  Util.h  eigenmvn.h  feitir_config.h.in
src/main/util/JSON/: JSONObject.cpp  JSONObject.h
src/test/: CMakeLists.txt  main_TEST.cpp  test_config_global.h.in  test_global.h.in
src/test/algorithm/: CMakeLists.txt
src/test/algorithm/BSIFT/: CMakeLists.txt  ComparasionArrayBSIFT_TEST.cpp  ComparisonArrayBSIFT_TEST.cpp  DescriptorMedianBSIFT_TEST.cpp  DescriptorPositionMedianBSIFT_TEST.cpp  DescriptorVoronoiPositionBSIFT_TEST.cpp  LocalitySensitiveHashingBSIFT_TEST.cpp  VectorsCompareBSIFT_TEST.cpp
src/test/algorithm/dictionary/: CMakeLists.txt  KMeansDictionary_TEST.cpp
src/test/algorithm/indexer/: BinaryInvertedFileIndexer_TEST.cpp  CMakeLists.txt  CrossIndexer_TEST.cpp  InvertedFileIndexer_TEST.cpp  SupportingWordsInvertedFileIndexer_TEST.cpp
src/test/algorithm/vocabulary/: CMakeLists.txt  DatabaseTranslator_TEST.cpp  HKMeansVocabulary_TEST.cpp  KMeansVocabulary_TEST.cpp
src/test/database/: CMakeLists.txt  DatabaseFactory_TEST.cpp
src/test/database/category/: CMakeLists.txt  CategoryFactory_TEST.cpp
src/test/database/image/: CMakeLists.txt  ImageFactory_TEST.cpp
src/test/image/: CMakeLists.txt  ImageFactory_TEST.cpp
src/test/resources/database/image/: vocabulary.yml
src/test/resources/random_set/: a.set  a_test.set  b.set  b_test.set
src/test/resources/util/JSON/: sample1.json  sample1.json.in  sample2.json  sample2.json.in  sample3.json  sample4.json
src/test/resources/vocabulary/: kmeans_1000_ukbench.yml  kmeans_1000_wang_small.yml
src/test/util/: CMakeLists.txt  Util_TEST.cpp
src/test/util/JSON/: CMakeLists.txt  JSONObject_TEST.cpp
tools/: build.sh  divide.sh  generateRandomSets.py  test_set.sh
tools/travis/: install_boost.sh  install_eigen.sh  install_opencv.sh
