add_executable(DescriptorMedianBSIFT_TEST DescriptorMedianBSIFT_TEST.cpp)
add_executable(ComparasionArrayBSIFT_TEST ComparasionArrayBSIFT_TEST.cpp)
add_executable(DescriptorPositionMedianBSIFT_TEST DescriptorPositionMedianBSIFT_TEST.cpp)
add_executable(LocalitySensitiveHashingBSIFT_TEST LocalitySensitiveHashingBSIFT_TEST.cpp)
add_executable(VectorsCompareBSIFT_TEST VectorsCompareBSIFT_TEST.cpp)

target_link_libraries(DescriptorMedianBSIFT_TEST bsift image ${Boost_LIBRARIES} ${OpenCV_LIBRARIES})
target_link_libraries(ComparasionArrayBSIFT_TEST bsift image ${Boost_LIBRARIES} ${OpenCV_LIBRARIES})
target_link_libraries(DescriptorPositionMedianBSIFT_TEST bsift image ${OpenCV_LIBRARIES})
target_link_libraries(LocalitySensitiveHashingBSIFT_TEST bsift image ${OpenCV_LIBRARIES})
target_link_libraries(VectorsCompareBSIFT_TEST bsift image ${OpenCV_LIBRARIES})

add_test(src/test/algorithm/BSIFT/DescriptorMedianBSIFT_TEST DescriptorMedianBSIFT_TEST)
add_test(src/test/algorithm/BSIFT/ComparasionArrayBSIFT_TEST ComparasionArrayBSIFT_TEST)
add_test(src/test/algorithm/BSIFT/DescriptorPositionMedianBSIFT_TEST DescriptorPositionMedianBSIFT_TEST)
add_test(src/test/algorithm/BSIFT/LocalitySensitiveHashingBSIFT_TEST LocalitySensitiveHashingBSIFT_TEST)
add_test(src/test/algorithm/BSIFT/VectorsCompareBSIFT_TEST VectorsCompareBSIFT_TEST)