add_executable(InvertedFileIndexer_TEST InvertedFileIndexer_TEST.cpp)
add_executable(BinaryInvertedFileIndexer_TEST BinaryInvertedFileIndexer_TEST.cpp)

target_link_libraries(InvertedFileIndexer_TEST algorithm database ${Boost_LIBRARIES})
target_link_libraries(BinaryInvertedFileIndexer_TEST algorithm database ${BOOST_LIBRARIES})

add_test(src/test/algorithm/indexer/InvertedFileIndexer_TEST InvertedFileIndexer_TEST)
add_test(src/test/algorithm/indexer/BinaryInvertedFileIndexer_TEST BinaryInvertedFileIndexer_TEST)